SLING-3359 - Classloader Leak Detector Console Tab
Adding a help message incase the JVM is not started with required VM options

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/contrib/extensions/leak-detector@1567043 13f79535-47bb-0310-9956-ffa450edef68